[package]
name = "raydium-mointor"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.132"
solana-sdk = "1.18.4"
solana-client = "1.18.4"
tokio = { version = "1.40.0", features = ["full"] }
structopt = "0.3.26"
log = "0.4.22"
env_logger = "0.11.5"
futures = "0.3.31"
anyhow = "1.0.90"
